add user, client, product, order, order item, and payment tables with necessary fields and constraints and the loginRequest dto & UserRepository

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,13 @@
 databaseChangeLog:
-  - preConditions:
-      - runningAs:
-          username: postgres
-
+  - include:
+      file: db/changelog/001-create-users-table.yaml
+  - include:
+      file: db/changelog/002-create-clients-table.yaml
+  - include:
+      file: db/changelog/003-create-products-table.yaml
+  - include:
+      file: db/changelog/004-create-orders-table.yaml
+  - include:
+      file: db/changelog/005-create-order-items-table.yaml
+  - include:
+      file: db/changelog/006-create-payments-table.yaml
